--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vilmate animation</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- <img src="img/svg-contour.svg" width="706" alt="">
@@ -13,6 +13,6 @@
         <path fill="none" stroke="#199C98" stroke-linecap="round" stroke-linejoin="round" stroke-width="30" d="M15.3 15.6h676.8V246L353.9 473.5l-338.6-229z"/>
     </svg> -->
     <div id="container"></div> 
-    <script src="js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
